# SlendermanTheEightGLStates

./: .gitignore  .gitmodules  CMakeLists.txt  CREDITS.md  LICENSE  TODO.md
assets/models/: spongebob_dancing_18.glb
assets/models/MapFloor/: map.gltf
assets/models/Tree01/: Tree01.gltf
assets/shaders/: debug.frag  debug.vert  default.frag  default.vert  shadow_depth.frag  shadow_depth.vert  skybox.frag  skybox.vert  terrain.frag  terrain.vert
include/: application.hpp  game.hpp  utilities.hpp  world.hpp
include/graphics/: cubemap.hpp  framebuffer.hpp  game_renderer.hpp  instanced_batch.hpp  material.hpp  mesh.hpp  model_loader.hpp  shader.hpp  shadow_map.hpp  shadow_renderer.hpp  skeleton.hpp  skybox_mesh.hpp  skybox_renderer.hpp  texture.hpp  vertex.hpp
include/graphics/animation/: animation_clip.hpp  animator.hpp
include/graphics/materials/: basic_material.hpp  pbr_material.hpp  terrain_material.hpp
include/graphics/shapes/: cube.hpp  skybox_cube.hpp  sphere.hpp
include/graphics/ui/: debug_ui.hpp
include/platform/: asset_manager.hpp  config_file.hpp  error_handling.hpp  system_info.hpp  window.hpp
include/playable/: aabb.hpp  camera.hpp  collider.hpp  entity.hpp  flashlight.hpp  player.hpp  raycast_hit.hpp  transform.hpp  tree_spawner.hpp
scripts/: compile-windows.sh  compile.sh  distribution.sh  generate.sh  run.sh
src/: application.cpp  game.cpp  main.cpp  world.cpp
src/graphics/: cubemap.cpp  framebuffer.cpp  game_renderer.cpp  mesh.cpp  model_loader.cpp  shader.cpp  shadow_map.cpp  shadow_renderer.cpp  skeleton.cpp  skybox_mesh.cpp  skybox_renderer.cpp  texture.cpp
src/graphics/animation/: animation_clip.cpp  animator.cpp
src/graphics/materials/: basic_material.cpp  pbr_material.cpp  terrain_material.cpp
src/graphics/ui/: debug_ui.cpp
src/platform/: config_file.cpp  error_handling.cpp  system_info.cpp  window.cpp
src/playable/: camera.cpp  entity.cpp  flashlight.cpp  player.cpp  tree_spawner.cpp
